removed break on article fecth loop; added loading screen and fixed styles on mobile register section;

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -132,20 +132,23 @@ body {
   }
 }
 
-#token-input, #email-input {
+#token-input,
+#email-input {
   border: 2px solid var(--border);
   border-radius: 25px;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-#token-input::placeholder, #email-input::placeholder {
+#token-input::placeholder,
+#email-input::placeholder {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   color: grey;
 }
 
-#login-btn, #register-btn {
+#login-btn,
+#register-btn {
   background: none;
   border: none;
   color: var(--text);
@@ -191,7 +194,7 @@ body {
   font-size: 14px;
 }
 
-/* Styling for the register box */
+
 #register-box {
   display: flex;
   flex-direction: row;
@@ -205,7 +208,13 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* Input styling (inherits existing styles) */
+@media (max-width: 600px) {
+  #register-box {
+    flex-direction: column !important;
+    gap: 4px;
+  }
+}
+
 #register-box input {
   width: 70%;
   padding-left: 20px;
@@ -217,7 +226,7 @@ body {
   margin: 0px !important;
 }
 
-/* Button styling (inherits existing button styles) */
+
 #register-box button {
   width: 15%;
   font-size: var(--button-font-size);
@@ -228,13 +237,28 @@ body {
   transition: background 0.3s ease;
 }
 
-/* Close button styling */
-#register-box span {
+#register-box span::before {
+  content: "✖";
   width: 10%;
   font-size: 18px;
   color: var(--danger);
   cursor: pointer;
   transition: color 0.3s ease;
+}
+
+@media (max-width: 600px) {
+  #register-box input {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #register-box button {
+    width: 35%;
+    margin-top: 10px;
+  }
+
+  #register-box span::before {
+    content: "Close";
+  }
 }
 
 #register-box span:hover {
@@ -1059,11 +1083,11 @@ div.grecaptcha-badge {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Ensure it overlays everything */
+  z-index: 1000;
 }
 
 .spinner {
@@ -1079,6 +1103,7 @@ div.grecaptcha-badge {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
